philly-311-citywide-meta/src/objects/Feedback_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Set the owner of created records to the ID that matches this name.  An owner may be either a user or a queue.  If no value is specified the logged-in user will be its owner.</description>
        <inlineHelpText>Set the owner of created records to the ID that matches this name.  An owner may be either a user or a queue.  If no value is specified the logged-in user will be its owner.</inlineHelpText>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_URI__c</fullName>
        <label>Post URI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>The default product/category for the new feedback item.</description>
        <inlineHelpText>The default product/category for the new feedback item.</inlineHelpText>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Post_URI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Post URI</label>
        <type>Checkbox</type>
    </fields>
    <label>Feedback Config</label>
</CustomObject>